--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<!--	Testing	-->
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.25.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
